--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -29,7 +29,10 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
 
 # Debug with pry
-gem 'pry', group: :development
+gem 'pry', group: [ :development, :test ]
+
+# Simplecov for Test Coverage
+gem 'simplecov', :require => false, :group => :test
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
