--- a/admin/Gemfile
+++ b/admin/Gemfile
@@ -1,6 +1,5 @@
 source 'https://rubygems.org'
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.5'
 # Use sqlite3 as the database for Active Record
@@ -18,21 +17,29 @@ gem 'coffee-rails', '~> 4.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
-# Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
+# Turbolinks makes following links in your web application faster. Read more:
+# https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0',          group: :doc
 
-# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+# Spring speeds up development by keeping your application running in the
+# background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
 # Pry for debugging
-gem 'pry', group: [ :development, :test ]
+gem 'pry', group: [:development, :test]
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
+
+# Simplecov for Test Coverage
+gem 'simplecov', require: false, group: :test
+
+# Rubocop for Style Guide
+gem 'rubocop', require: false
 
 # Use unicorn as the app server
 # gem 'unicorn'
@@ -45,4 +52,3 @@ gem 'bcrypt', '~> 3.1.7'
 
 # https://github.com/tzinfo/tzinfo/wiki/Resolving-TZInfo::DataSourceNotFound-Errors
 gem 'tzinfo-data'
-
