--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,6 +1,5 @@
 source 'https://rubygems.org'
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.5'
 # Use sqlite3 as the database for Active Record
@@ -25,14 +24,18 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0',          group: :doc
 
-# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+# Spring speeds up development by keeping your application running in the
+# background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
 # Debug with pry
-gem 'pry', group: [ :development, :test ]
+gem 'pry', group: [:development, :test]
 
 # Simplecov for Test Coverage
-gem 'simplecov', :require => false, :group => :test
+gem 'simplecov', require: false, group: :test
+
+# Rubocop for Style Guide
+gem 'rubocop', require: false
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
@@ -48,4 +51,3 @@ gem 'bcrypt', '~> 3.1.7'
 
 # https://github.com/tzinfo/tzinfo/wiki/Resolving-TZInfo::DataSourceNotFound-Errors
 gem 'tzinfo-data'
-
