Cleanup and testing

--- a/backend/test/fixtures/addresses.yml
+++ b/backend/test/fixtures/addresses.yml
@@ -1,5 +1,4 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: Dummy Coupon
-  description: Dummy Coupon's Description
+  address: 138u97o2Sv5qUmucSasmeNf5CAb3B1CmD6
